--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="org.secuso.privacyfriendlypasswordgenerator.SplashActivity"
+            android:name="org.secuso.privacyfriendlypasswordgenerator.activities.SplashActivity"
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,39 +17,39 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="org.secuso.privacyfriendlypasswordgenerator.MainActivity"
+            android:name="org.secuso.privacyfriendlypasswordgenerator.activities.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity
-            android:name="org.secuso.privacyfriendlypasswordgenerator.AboutActivity"
+            android:name="org.secuso.privacyfriendlypasswordgenerator.activities.AboutActivity"
             android:label="@string/about"
-            android:parentActivityName="org.secuso.privacyfriendlypasswordgenerator.MainActivity"
+            android:parentActivityName="org.secuso.privacyfriendlypasswordgenerator.activities.MainActivity"
             android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="org.secuso.privacyfriendlypasswordgenerator.MainActivity" />
+                android:value="org.secuso.privacyfriendlypasswordgenerator.activities.MainActivity" />
         </activity>
         <activity
-            android:name="org.secuso.privacyfriendlypasswordgenerator.HelpActivity"
+            android:name="org.secuso.privacyfriendlypasswordgenerator.activities.HelpActivity"
             android:label="@string/help"
-            android:parentActivityName="org.secuso.privacyfriendlypasswordgenerator.MainActivity"
+            android:parentActivityName="org.secuso.privacyfriendlypasswordgenerator.activities.MainActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="org.secuso.privacyfriendlypasswordgenerator.MainActivity" />
+                android:value="org.secuso.privacyfriendlypasswordgenerator.activities.MainActivity" />
         </activity>
         <activity
-            android:name="org.secuso.privacyfriendlypasswordgenerator.SettingsActivity"
+            android:name="org.secuso.privacyfriendlypasswordgenerator.activities.SettingsActivity"
             android:label="@string/title_activity_settings"
-            android:parentActivityName="org.secuso.privacyfriendlypasswordgenerator.MainActivity"
+            android:parentActivityName="org.secuso.privacyfriendlypasswordgenerator.activities.MainActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="org.secuso.privacyfriendlypasswordgenerator.MainActivity" />
+                android:value="org.secuso.privacyfriendlypasswordgenerator.activities.MainActivity" />
         </activity>
     </application>
 
