--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,14 +22,12 @@
         <activity
             android:name="org.secuso.privacyfriendlypasswordgenerator.activities.MainActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity
             android:name="org.secuso.privacyfriendlypasswordgenerator.activities.AboutActivity"
             android:label="@string/about"
-            android:parentActivityName="org.secuso.privacyfriendlypasswordgenerator.activities.MainActivity"
-            android:screenOrientation="portrait">
+            android:parentActivityName="org.secuso.privacyfriendlypasswordgenerator.activities.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="org.secuso.privacyfriendlypasswordgenerator.activities.MainActivity" />
@@ -38,7 +36,6 @@
             android:name="org.secuso.privacyfriendlypasswordgenerator.activities.HelpActivity"
             android:label="@string/help"
             android:parentActivityName="org.secuso.privacyfriendlypasswordgenerator.activities.MainActivity"
-            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -48,7 +45,6 @@
             android:name="org.secuso.privacyfriendlypasswordgenerator.activities.SettingsActivity"
             android:label="@string/title_activity_settings"
             android:parentActivityName="org.secuso.privacyfriendlypasswordgenerator.activities.MainActivity"
-            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
