--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,9 @@
         <activity android:name=".tutorial.TutorialActivity"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
+        <activity android:name=".tutorial.GeneratorTutorialActivity"
+            android:theme="@style/Theme.Transparent">
+        </activity>
         <activity
             android:name="org.secuso.privacyfriendlypasswordgenerator.activities.MainActivity"
             android:label="@string/app_name"
