--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,10 @@
         <activity
             android:name=".tutorial.TutorialActivity"
             android:parentActivityName="org.secuso.privacyfriendlypasswordgenerator.activities.MainActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
+            android:name=".tutorial.MasterPWTutorialActivity"
+            android:parentActivityName="org.secuso.privacyfriendlypasswordgenerator.activities.MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -35,7 +39,7 @@
         <activity
             android:name="org.secuso.privacyfriendlypasswordgenerator.activities.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name="org.secuso.privacyfriendlypasswordgenerator.activities.AboutActivity"
             android:label="@string/about"
