--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 29
-    buildToolsVersion "26.0.3"
+    compileSdkVersion 32
     defaultConfig {
         applicationId "org.secuso.privacyfriendlypasswordgenerator"
         minSdkVersion 21
-        targetSdkVersion 29
-        versionCode 5
-        versionName "1.1.0"
+        targetSdkVersion 32
+        versionCode 6
+        versionName "1.2.0"
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
     buildTypes {
@@ -28,20 +27,21 @@ repositories{
 dependencies {
     implementation project(path: ':backup-api')
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'androidx.sqlite:sqlite:2.2.0'
     androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.legacy:legacy-support-core-utils:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
 
-    def work_version = "2.4.0"
+    def work_version = "2.7.1"
     implementation "androidx.work:work-runtime:$work_version"
     implementation "androidx.work:work-runtime-ktx:$work_version"
     androidTestImplementation "androidx.work:work-testing:$work_version"
 
-    testImplementation 'junit:junit:4.13.1'
+    testImplementation 'junit:junit:4.13.2'
 }
