--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,41 @@
-name: Build
-on: [push, pull_request]
+name: Build Test
+on: [ push, pull_request ]
 
 jobs:
   build:
     runs-on: ubuntu-20.04
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v3
         with:
           submodules: 'recursive'
+      - name: Set up JDK environment
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'zulu'
+          java-version: 17
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
+      - name: Run local unit tests
+        run: bash ./gradlew test --stacktrace
       - name: Build the app
-        run: ./gradlew build
+        run: bash ./gradlew build --stacktrace
+  connected-tests:
+    runs-on: macos-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          submodules: 'recursive'
+      - name: Set up JDK environment
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'zulu'
+          java-version: 17
+      - name: Run connected tests
+        uses: ReactiveCircus/android-emulator-runner@v2.28.0
+        with:
+          api-level: 32
+          target: google_apis
+          arch: x86_64
+          script: ./gradlew connectedCheck
