--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,3 +66,15 @@ dependencies {
         }
     }
 }
+
+tasks.withType(Test) {
+    testLogging {
+        events "passed", "skipped", "failed", "standard_out"
+        exceptionFormat "full"
+        afterSuite { desc, result ->
+            if (!desc.parent) {
+                println("\nResult: ${result.resultType} (${result.testCount} tests, ${result.successfulTestCount} passed, ${result.failedTestCount} failed, ${result.skippedTestCount} skipped)\n")
+            }
+        }
+    }
+}
