--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,4 +38,4 @@ jobs:
           api-level: 32
           target: google_apis
           arch: x86_64
-          script: ./gradlew connectedCheck
+          script: ./gradlew :app:connectedCheck
