--- a/.github/workflows/android-test.yml
+++ b/.github/workflows/android-test.yml
@@ -1,12 +1,14 @@
 name: Android Emulator Tests
 on: [ push, pull_request ]
 
-env:
-  API_LEVEL: 32
-
 jobs:
   connected-tests:
     runs-on: macos-latest
+    strategy:
+      matrix:
+        api-level: [32]
+        target: [google_apis]
+        arch: [x86_64]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -29,13 +31,15 @@ jobs:
           path: |
             ~/.android/avd/*
             ~/.android/adb*
-          key: avd-${{ env.API_LEVEL }}
+          key: avd-${{ matrix.api-level }}
 
       - name: create AVD and generate snapshot for caching
         if: steps.avd-cache.outputs.cache-hit != 'true'
         uses: reactivecircus/android-emulator-runner@v2
         with:
-          api-level: ${{ env.API_LEVEL }}
+          api-level: ${{ matrix.api-level }}
+          target: ${{ matrix.target }}
+          arch: ${{ matrix.arch }}
           force-avd-creation: false
           emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
           disable-animations: false
@@ -44,9 +48,9 @@ jobs:
       - name: Run connected tests
         uses: ReactiveCircus/android-emulator-runner@v2
         with:
-          api-level: ${{ env.API_LEVEL }}
-          target: google_apis
-          arch: x86_64
+          api-level: ${{ matrix.api-level }}
+          target: ${{ matrix.target }}
+          arch: ${{ matrix.arch }}
           force-avd-creation: false
           emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
           disable-animations: true
