--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,9 +39,15 @@ dependencies {
     implementation project(path: ':backup-api')
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.sqlite:sqlite:2.3.1'
-    androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0', {
+    androidTestImplementation('androidx.test.espresso:espresso-core:3.5.1', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation('com.android.support.test.espresso:espresso-contrib:3.0.2') {
+        exclude group: 'com.android.support', module: 'appcompat'
+        exclude group: 'com.android.support', module: 'support-v4'
+        exclude module: 'recyclerview-v7'
+    }
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.legacy:legacy-support-core-utils:1.0.0'
