--- a/.github/workflows/android-test.yml
+++ b/.github/workflows/android-test.yml
@@ -2,7 +2,23 @@ name: Android Emulator Tests
 on: [ push, pull_request ]
 
 jobs:
-  connected-tests:
+  check-if-tests-exist:
+    runs-on: ubuntu-latest
+    outputs:
+      status: ${{ steps.check-androidTest.outputs.NOT_EMPTY }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          submodules: "recursive"
+      - name: Check if androidTest folder is not empty
+        run: |
+          echo "NOT_EMPTY=$([ "$(ls -A app/src/androidTest)" ] && echo 'true' || echo 'false')"
+          echo "NOT_EMPTY=$([ "$(ls -A app/src/androidTest)" ] && echo 'true' || echo 'false')" >> $GITHUB_OUTPUT
+        id: check-androidTest
+  test:
+    needs: check-if-tests-exist
+    if: needs.check-if-tests-exist.outputs.status == 'true'
     runs-on: macos-latest
     strategy:
       matrix:
