--- a/.github/workflows/android-test.yml
+++ b/.github/workflows/android-test.yml
@@ -22,7 +22,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        api-level: [29]
+        api-level: [21, 29, 34]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
