--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,6 @@
 buildscript {
     ext.kotlin_version = "1.8.10"
     repositories {
-        jcenter()
         mavenCentral()
         google()
     }
@@ -19,9 +18,9 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
         mavenCentral()
         google()
+        maven { url('https://jitpack.io') }
     }
 }
 
