Change severity of missing translations to warning

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,8 @@ android {
         }
     }
     lint {
-        abortOnError false
+        abortOnError true
+        warning 'MissingTranslation'
     }
     namespace 'org.secuso.privacyfriendlypasswordgenerator'
 }
