--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,15 +17,31 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    android.applicationVariants.all { variant ->
-        variant.outputs.all {
-            def appName = "pfa-passwordgenerator"
+    buildFeatures {
+        buildConfig true
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_17.toString()
+    }
+
+    kotlin {
+        jvmToolchain(17)
+    }
+
+    android.applicationVariants.configureEach { variant ->
+        variant.outputs.configureEach {
+            def appName = "pfa-dame"
             outputFileName = appName + "-${variant.name}-v${variant.versionName}.apk"
         }
     }
+
     lint {
-        abortOnError true
-        warning 'MissingTranslation'
+        lintConfig = file("lint.xml")
     }
     namespace 'org.secuso.privacyfriendlypasswordgenerator'
 }
